tests/rosetta/transpiler/FS/dijkstras-algorithm.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/dijkstras-algorithm.fs(33,77): error FS0010: Unexpected symbol ')' in expression

/workspace/mochi/tests/rosetta/transpiler/FS/dijkstras-algorithm.fs(80,80): error FS0010: Unexpected symbol ')' in expression

/workspace/mochi/tests/rosetta/transpiler/FS/dijkstras-algorithm.fs(79,13): error FS3123: Missing 'do' in 'for' expression. Expected 'for <pat> in <expr> do <expr>'.

/workspace/mochi/tests/rosetta/transpiler/FS/dijkstras-algorithm.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Dijkstras-algorithm' based on the file name 'dijkstras-algorithm.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.
